differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr79758.c-4.8.2-0.out.txt
pr79758.c:4:15: error: ‘a’ undeclared here (not in a function)
 void fn1 (int[a]) { };  
               ^
pr79758.c: In function ‘fn1’:
pr79758.c:4:1: error: parameter name omitted
 void fn1 (int[a]) { };  
 ^
pr79758.c: At top level:
pr79758.c:5:6: error: redefinition of ‘fn1’
 void fn1 (b) { };  
      ^
pr79758.c:4:6: note: previous definition of ‘fn1’ was here
 void fn1 (int[a]) { };  
      ^
pr79758.c:5: confused by earlier errors, bailing out
